// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> Render empty 1`] = `
<button
  className="btn btn-primary"
  type="submit"
/>
`;

exports[`<Button> With className 1`] = `
<button
  className="some-class btn btn-primary"
  type="submit"
>
  Some text
</button>
`;

exports[`<Button> With text 1`] = `
<button
  className="btn btn-primary"
  type="submit"
>
  Some text
</button>
`;

exports[`<Button> With type 1`] = `
<button
  className="btn btn-primary"
  type="button"
>
  Some text
</button>
`;

exports[`<Button> appearance=danger 1`] = `
<button
  className="btn btn-danger"
  type="submit"
>
  Some text
</button>
`;

exports[`<Button> appearance=light 1`] = `
<button
  className="btn btn-light"
  type="submit"
>
  Some text
</button>
`;

exports[`<Button> block 1`] = `
<button
  className="btn btn-block btn-primary"
  type="submit"
>
  Some text
</button>
`;

exports[`<Button> lg 1`] = `
<button
  className="btn btn-lg btn-primary"
  type="submit"
>
  Some text
</button>
`;
